<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="tipReset">What Country are you in?</string>
    <string name="price">Price </string>
    <string name="percent">Percent</string>
    <string name="tip">Tip </string>
    <string name="total">Total </string>
    <string name = "reset">0.00</string>
    <string-array name = "country_array">
        <item>Australia</item>
        <item>Belize</item>
        <item>Canada</item>
        <item>China</item>
        <item>France</item>
        <item>Germany</item>
        <item>Iceland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Mexico</item>
        <item>New Zealand</item>
        <item>Portugal</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>
    <string name="btnDecrement">-</string>
	<string name="btnIncrement">+</string>
	<string name="tipDefault">0%</string>
	
	<string name="banner_ad_unit_id">ca-app-pub-2788419756497165/9209756532</string>
</resources>
