<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.Reifman.midterm.MainActivity" >

    <!-- android:layout_gravity adjusts the layout. center the textview -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/countryChoice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tipThisMuch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/tipReset" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp" >

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/billAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/reset"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp" >

            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/percent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/decrement"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDecrement" />

            <TextView
                android:id="@+id/tipPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tipDefault"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/increment"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIncrement" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp" >

            <TextView
                android:id="@+id/tipLabel"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tipAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reset"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reset"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>